Fixed spacing issue with navbar links

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,6 @@
 @import "variables";
 
 footer {
-  margin-top: 50px; /* REMOVE THIS LATER */
 	padding-top: 20px;
 	background-color: $darkgray;
 	font-size: 16px;
