--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,6 +3,7 @@
 nav {
 	background-color: $darkgray;
 	padding: 3px 0 0;
+	margin-bottom: 10px;
 	text-align: center;
 	height: 130px;
 
